src/components/Collapse/Collaplse.scss
.collapse {
  margin-top: 30px;
  &:first-child {
    margin-top: 60px;
  }
  &--toggle {
    padding: 6px 0;
    width: 100%;
    box-shadow: 0 2px 6px #cccccc;
    background: none;
    border: 1px solid #000;
    border-radius: 8px;
    text-align: center;
    font-size: 1.7rem;
    outline: none;
    cursor: pointer;
  }
  &--item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 8px 10px;
    font-size: 1.3rem;
    margin: 5px 0;
    background: #fbe7e7;
    border-radius: 4px;
    &:first-child {
      margin-top: 15px;
    }
    .awards {
      text-align: right;
      width: 80%;
    }
  }
}

